Fixed screen size of resume.html on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3431,7 +3431,7 @@
 			padding: 3em 0 77.28% 0;
 			margin: 0 auto; 
 			height: 100%;
-			width: 55em;
+			width: 100%;
 		}
 
 		.wrapper .pdfcontain .pdf {
